<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@drawable/fondoprincipal">
    android:padding="10dip" >

    <TextView
        android:id="@+id/txtusername"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Username"
        android:paddingTop="75dp"
        android:textStyle="bold"
        android:textColor="@android:color/background_dark"
        android:paddingLeft="10dp" />

    <EditText
        android:id="@+id/username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtusername"
        android:inputType="text"
        android:textColor="@android:color/background_dark"
        android:paddingLeft="10dp" />

    <TextView
        android:id="@+id/txtpassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username"
        android:text="@string/Password"
        android:textColor="@android:color/background_dark"
        android:textStyle="bold"
        android:paddingLeft="10dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtpassword"
        android:inputType="textPassword"
        android:textColor="@android:color/background_dark"
        android:paddingLeft="10dp" />

    <Button
        android:id="@+id/login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:text="@string/LoginBtn" />

    <Button
        android:id="@+id/signup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login"
        android:text="@string/SignupBtn" />

    <Button
        android:id="@+id/nologin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/LoginSin"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/signup" />

</RelativeLayout>